# nOS

./: .gitignore  Makefile
compositor/: meson.build
compositor/include/: noscomp.h
compositor/src/: animation.c  blur.c  cursor.c  decoration.c  input.c  layer_shell.c  main.c  output.c  scene.c  server.c  shadow.c  wobble.c  xdg_shell.c  xwayland.c
desktop/gtk/: settings.ini
desktop/session/: nos-session
desktop/themes/nOS-Dark/openbox-3/: themerc
display-manager/greetd/: config.toml  style.css
installer/: installer.sh  nos_installer.css  nos_installer.py  nos_setup_wizard.css  nos_setup_wizard.py  postinstall.sh
rootfs/etc/: loader.conf  rc.conf  sysctl.conf
scripts/: nos-rollback  nos-settings  nos-update
shell/nosface-bar/: bar.py  style.css
shell/nosface-dock/: dock.py  style.css
shell/nosface-launcher/: launcher.py  style.css
shell/nosface-notify/: notify.py  style.css
themes/dark/: colors.sh  theme.css
themes/light/: colors.sh  theme.css
